structmeta-tests/tests/compile_fail/struct_meta/not_parse.stderr
error[E0277]: the trait bound `NotParse: Parse` is not satisfied
   --> tests/compile_fail/struct_meta/not_parse.rs:3:5
    |
3   |     not_parse: NotParse,
    |     ^^^^^^^^^ the trait `Parse` is not implemented for `NotParse`
    |
    = help: the following other types implement trait `Parse`:
              Abi
              Abstract
              AndAnd
              AndEq
              AngleBracketedGenericArguments
              Arm
              As
              At
            and 251 others
note: required by a bound in `ParseBuffer::<'a>::parse`
   --> $CARGO/syn-1.0.98/src/parse.rs
    |
    |     pub fn parse<T: Parse>(&self) -> Result<T> {
    |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
